--- a/boolando-images/style.css
+++ b/boolando-images/style.css
@@ -14,6 +14,14 @@ header{
     background-image: url(boolean-logo.png);
     padding:10px;
 }
+.href{
+    color: white;
+}
+
+.prima{
+    display: flex;
+}
+
 main{
     display: block;
 }
@@ -68,5 +76,6 @@ div footer{
     justify-content: space-between;    
 }
 .destra{
-    
+width: 20px;
+height: 20px;
 }
